// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification 24 hours before an offer expires 1`] = `
<View
  onPress={[Function]}
  style={
    [
      {
        "flex": 1,
        "flexDirection": "column",
        "paddingHorizontal": 20,
        "paddingVertical": 16,
      },
      {
        "borderBottomWidth": 0.5,
      },
      {
        "borderColor": "#53565A",
      },
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
          "marginRight": 28,
        }
      }
    >
      <View
        onPress={[Function]}
      >
        <Image
          source={
            {
              "headers": {
                "App-Version": "3.8.0",
                "Cache-Control": "no-cache, no-store, must-revalidate",
                "Content-Type": "application/json",
                "Pragma": "no-cache",
                "no-cache": "1",
              },
              "uri": "https://cdn.minds.com/icon/fakeGuid/medium/undefined",
            }
          }
          style={
            {
              "borderRadius": 18.5,
              "height": 37,
              "width": 37,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            {
              "borderRadius": 14,
              "bottom": -15,
              "height": 24,
              "left": 15,
              "margin": 7,
              "overflow": "hidden",
              "position": "absolute",
              "shadowColor": "rgba(0,0,0, .4)",
              "shadowOffset": {
                "height": 1,
                "width": 1,
              },
              "shadowOpacity": 1,
              "shadowRadius": 1,
              "width": 24,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFD048",
                  "borderRadius": 14,
                  "height": 24,
                  "justifyContent": "center",
                  "width": 24,
                }
              }
            >
              <MaterialIcons
                color="#000000"
                name="tips-and-updates"
                size={10}
                style={
                  {
                    "backgroundColor": "transparent",
                  }
                }
                testID="iconIcon"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 9,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        Don't forget to review
        <Text
          onPress={[Function]}
          style={
            [
              {
                "color": "#F2F2F2",
              },
              {
                "fontFamily": "Roboto_400Regular",
              },
              [
                {
                  "fontSize": 15,
                  "lineHeight": 18,
                },
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontWeight": "500",
                },
                {
                  "color": "#F2F2F2",
                },
              ],
            ]
          }
        >
           Fake user's 
        </Text>
         
        <Text
          onPress={[Function]}
          style={
            [
              {
                "color": "#F2F2F2",
              },
              {
                "fontFamily": "Roboto_400Regular",
              },
              [
                {
                  "fontSize": 15,
                  "lineHeight": 18,
                },
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontWeight": "500",
                },
                {
                  "color": "#F2F2F2",
                },
              ],
            ]
          }
        >
          Supermind offer
        </Text>
      </Text>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 2,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        Sep 20, 2022
      </Text>
      <View
        style={
          [
            {
              "alignSelf": "center",
              "borderRadius": 20,
              "height": 10,
              "marginLeft": 8,
              "width": 10,
            },
            {
              "backgroundColor": "#FFD048",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`Notification Affiliate earnings deposited 1`] = `
<View
  onPress={[Function]}
  style={
    [
      {
        "flex": 1,
        "flexDirection": "column",
        "paddingHorizontal": 20,
        "paddingVertical": 16,
      },
      {
        "borderBottomWidth": 0.5,
      },
      {
        "borderColor": "#53565A",
      },
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
          "marginRight": 28,
        }
      }
    >
      <View
        onPress={[Function]}
      >
        <Image
          source={
            {
              "headers": {
                "App-Version": "3.8.0",
                "Cache-Control": "no-cache, no-store, must-revalidate",
                "Content-Type": "application/json",
                "Pragma": "no-cache",
                "no-cache": "1",
              },
              "uri": "https://cdn.minds.com/icon/fakeGuid/medium/undefined",
            }
          }
          style={
            {
              "borderRadius": 18.5,
              "height": 37,
              "width": 37,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            {
              "borderRadius": 14,
              "bottom": -15,
              "height": 24,
              "left": 15,
              "margin": 7,
              "overflow": "hidden",
              "position": "absolute",
              "shadowColor": "rgba(0,0,0, .4)",
              "shadowOffset": {
                "height": 1,
                "width": 1,
              },
              "shadowOpacity": 1,
              "shadowRadius": 1,
              "width": 24,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFD048",
                  "borderRadius": 14,
                  "height": 24,
                  "justifyContent": "center",
                  "width": 24,
                }
              }
            >
              <MaterialIcons
                color="#000000"
                name="attach-money"
                size={10}
                style={
                  {
                    "backgroundColor": "transparent",
                  }
                }
                testID="iconIcon"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 9,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        You just earned $10.99 from Minds Affiliate Program
         
      </Text>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 2,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        Sep 20, 2022
      </Text>
      <View
        style={
          [
            {
              "alignSelf": "center",
              "borderRadius": 20,
              "height": 10,
              "marginLeft": 8,
              "width": 10,
            },
            {
              "backgroundColor": "#FFD048",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`Notification An offer expires 1`] = `
<View
  onPress={[Function]}
  style={
    [
      {
        "flex": 1,
        "flexDirection": "column",
        "paddingHorizontal": 20,
        "paddingVertical": 16,
      },
      {
        "borderBottomWidth": 0.5,
      },
      {
        "borderColor": "#53565A",
      },
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
          "marginRight": 28,
        }
      }
    >
      <View
        onPress={[Function]}
      >
        <Image
          source={
            {
              "headers": {
                "App-Version": "3.8.0",
                "Cache-Control": "no-cache, no-store, must-revalidate",
                "Content-Type": "application/json",
                "Pragma": "no-cache",
                "no-cache": "1",
              },
              "uri": "https://cdn.minds.com/icon/fakeGuid/medium/undefined",
            }
          }
          style={
            {
              "borderRadius": 18.5,
              "height": 37,
              "width": 37,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            {
              "borderRadius": 14,
              "bottom": -15,
              "height": 24,
              "left": 15,
              "margin": 7,
              "overflow": "hidden",
              "position": "absolute",
              "shadowColor": "rgba(0,0,0, .4)",
              "shadowOffset": {
                "height": 1,
                "width": 1,
              },
              "shadowOpacity": 1,
              "shadowRadius": 1,
              "width": 24,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFD048",
                  "borderRadius": 14,
                  "height": 24,
                  "justifyContent": "center",
                  "width": 24,
                }
              }
            >
              <MaterialIcons
                color="#000000"
                name="tips-and-updates"
                size={10}
                style={
                  {
                    "backgroundColor": "transparent",
                  }
                }
                testID="iconIcon"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 9,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        <Text
          onPress={[Function]}
          style={
            [
              {
                "color": "#F2F2F2",
              },
              {
                "fontFamily": "Roboto_400Regular",
              },
              [
                {
                  "fontSize": 15,
                  "lineHeight": 18,
                },
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontWeight": "500",
                },
                {
                  "color": "#F2F2F2",
                },
              ],
            ]
          }
        >
          Fake user 
        </Text>
        missed
         your
         
        <Text
          onPress={[Function]}
          style={
            [
              {
                "color": "#F2F2F2",
              },
              {
                "fontFamily": "Roboto_400Regular",
              },
              [
                {
                  "fontSize": 15,
                  "lineHeight": 18,
                },
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontWeight": "500",
                },
                {
                  "color": "#F2F2F2",
                },
              ],
            ]
          }
        >
          Supermind offer
        </Text>
      </Text>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 2,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        Sep 20, 2022
      </Text>
      <View
        style={
          [
            {
              "alignSelf": "center",
              "borderRadius": 20,
              "height": 10,
              "marginLeft": 8,
              "width": 10,
            },
            {
              "backgroundColor": "#FFD048",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`Notification Boost accepted 1`] = `
<View
  onPress={[Function]}
  style={
    [
      {
        "flex": 1,
        "flexDirection": "column",
        "paddingHorizontal": 20,
        "paddingVertical": 16,
      },
      {
        "borderBottomWidth": 0.5,
      },
      {
        "borderColor": "#53565A",
      },
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
          "marginRight": 28,
        }
      }
    >
      <View
        onPress={[Function]}
      >
        <Image
          source={
            {
              "headers": {
                "App-Version": "3.8.0",
                "Cache-Control": "no-cache, no-store, must-revalidate",
                "Content-Type": "application/json",
                "Pragma": "no-cache",
                "no-cache": "1",
              },
              "uri": "https://cdn.minds.com/icon/fakeGuid/medium/undefined",
            }
          }
          style={
            {
              "borderRadius": 18.5,
              "height": 37,
              "width": 37,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            {
              "borderRadius": 14,
              "bottom": -15,
              "height": 24,
              "left": 15,
              "margin": 7,
              "overflow": "hidden",
              "position": "absolute",
              "shadowColor": "rgba(0,0,0, .4)",
              "shadowOffset": {
                "height": 1,
                "width": 1,
              },
              "shadowOpacity": 1,
              "shadowRadius": 1,
              "width": 24,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFD048",
                  "borderRadius": 14,
                  "height": 24,
                  "justifyContent": "center",
                  "width": 24,
                }
              }
            >
              <MaterialCommunityIcons
                color="#000000"
                name="trending-up"
                size={10}
                style={
                  {
                    "backgroundColor": "transparent",
                  }
                }
                testID="iconIcon"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 9,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        Your Boost is now running
         
      </Text>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 2,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        Sep 20, 2022
      </Text>
      <View
        style={
          [
            {
              "alignSelf": "center",
              "borderRadius": 20,
              "height": 10,
              "marginLeft": 8,
              "width": 10,
            },
            {
              "backgroundColor": "#FFD048",
            },
          ]
        }
      />
    </View>
  </View>
  <View
    style={
      [
        {
          "marginTop": 24,
          "paddingLeft": 0,
        },
        false,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {},
          {
            "borderWidth": 0.5,
          },
          {
            "borderColor": "#3f4b56",
          },
          {
            "backgroundColor": "#1C1D1F",
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="ActivityView"
      >
        <View
          style={null}
        >
          <View
            style={
              [
                {
                  "padding": 1,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Notification Boost complete 1`] = `
<View
  onPress={[Function]}
  style={
    [
      {
        "flex": 1,
        "flexDirection": "column",
        "paddingHorizontal": 20,
        "paddingVertical": 16,
      },
      {
        "borderBottomWidth": 0.5,
      },
      {
        "borderColor": "#53565A",
      },
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
          "marginRight": 28,
        }
      }
    >
      <View
        onPress={[Function]}
      >
        <Image
          source={
            {
              "headers": {
                "App-Version": "3.8.0",
                "Cache-Control": "no-cache, no-store, must-revalidate",
                "Content-Type": "application/json",
                "Pragma": "no-cache",
                "no-cache": "1",
              },
              "uri": "https://cdn.minds.com/icon/fakeGuid/medium/undefined",
            }
          }
          style={
            {
              "borderRadius": 18.5,
              "height": 37,
              "width": 37,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            {
              "borderRadius": 14,
              "bottom": -15,
              "height": 24,
              "left": 15,
              "margin": 7,
              "overflow": "hidden",
              "position": "absolute",
              "shadowColor": "rgba(0,0,0, .4)",
              "shadowOffset": {
                "height": 1,
                "width": 1,
              },
              "shadowOpacity": 1,
              "shadowRadius": 1,
              "width": 24,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFD048",
                  "borderRadius": 14,
                  "height": 24,
                  "justifyContent": "center",
                  "width": 24,
                }
              }
            >
              <MaterialCommunityIcons
                color="#000000"
                name="trending-up"
                size={10}
                style={
                  {
                    "backgroundColor": "transparent",
                  }
                }
                testID="iconIcon"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 9,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        Your Boost is complete
         
      </Text>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 2,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        Sep 20, 2022
      </Text>
      <View
        style={
          [
            {
              "alignSelf": "center",
              "borderRadius": 20,
              "height": 10,
              "marginLeft": 8,
              "width": 10,
            },
            {
              "backgroundColor": "#FFD048",
            },
          ]
        }
      />
    </View>
  </View>
  <View
    style={
      [
        {
          "marginTop": 24,
          "paddingLeft": 0,
        },
        false,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {},
          {
            "borderWidth": 0.5,
          },
          {
            "borderColor": "#3f4b56",
          },
          {
            "backgroundColor": "#1C1D1F",
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="ActivityView"
      >
        <View
          style={null}
        >
          <View
            style={
              [
                {
                  "padding": 1,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Notification Boost rejected 1`] = `
<View
  onPress={[Function]}
  style={
    [
      {
        "flex": 1,
        "flexDirection": "column",
        "paddingHorizontal": 20,
        "paddingVertical": 16,
      },
      {
        "borderBottomWidth": 0.5,
      },
      {
        "borderColor": "#53565A",
      },
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
          "marginRight": 28,
        }
      }
    >
      <View
        onPress={[Function]}
      >
        <Image
          source={
            {
              "headers": {
                "App-Version": "3.8.0",
                "Cache-Control": "no-cache, no-store, must-revalidate",
                "Content-Type": "application/json",
                "Pragma": "no-cache",
                "no-cache": "1",
              },
              "uri": "https://cdn.minds.com/icon/fakeGuid/medium/undefined",
            }
          }
          style={
            {
              "borderRadius": 18.5,
              "height": 37,
              "width": 37,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            {
              "borderRadius": 14,
              "bottom": -15,
              "height": 24,
              "left": 15,
              "margin": 7,
              "overflow": "hidden",
              "position": "absolute",
              "shadowColor": "rgba(0,0,0, .4)",
              "shadowOffset": {
                "height": 1,
                "width": 1,
              },
              "shadowOpacity": 1,
              "shadowRadius": 1,
              "width": 24,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFD048",
                  "borderRadius": 14,
                  "height": 24,
                  "justifyContent": "center",
                  "width": 24,
                }
              }
            >
              <MaterialCommunityIcons
                color="#000000"
                name="trending-up"
                size={10}
                style={
                  {
                    "backgroundColor": "transparent",
                  }
                }
                testID="iconIcon"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 9,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        Your Boost was rejected
         
      </Text>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 2,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        Sep 20, 2022
      </Text>
      <View
        style={
          [
            {
              "alignSelf": "center",
              "borderRadius": 20,
              "height": 10,
              "marginLeft": 8,
              "width": 10,
            },
            {
              "backgroundColor": "#FFD048",
            },
          ]
        }
      />
    </View>
  </View>
  <View
    style={
      [
        {
          "marginTop": 24,
          "paddingLeft": 0,
        },
        false,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {},
          {
            "borderWidth": 0.5,
          },
          {
            "borderColor": "#3f4b56",
          },
          {
            "backgroundColor": "#1C1D1F",
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="ActivityView"
      >
        <View
          style={null}
        >
          <View
            style={
              [
                {
                  "padding": 1,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Notification Gift boost created 1`] = `
<View
  onPress={[Function]}
  style={
    [
      {
        "flex": 1,
        "flexDirection": "column",
        "paddingHorizontal": 20,
        "paddingVertical": 16,
      },
      {
        "borderBottomWidth": 0.5,
      },
      {
        "borderColor": "#53565A",
      },
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
          "marginRight": 28,
        }
      }
    >
      <View
        onPress={[Function]}
      >
        <Image
          source={
            {
              "headers": {
                "App-Version": "3.8.0",
                "Cache-Control": "no-cache, no-store, must-revalidate",
                "Content-Type": "application/json",
                "Pragma": "no-cache",
                "no-cache": "1",
              },
              "uri": "https://cdn.minds.com/icon/fakeGuid/medium/undefined",
            }
          }
          style={
            {
              "borderRadius": 18.5,
              "height": 37,
              "width": 37,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            {
              "borderRadius": 14,
              "bottom": -15,
              "height": 24,
              "left": 15,
              "margin": 7,
              "overflow": "hidden",
              "position": "absolute",
              "shadowColor": "rgba(0,0,0, .4)",
              "shadowOffset": {
                "height": 1,
                "width": 1,
              },
              "shadowOpacity": 1,
              "shadowRadius": 1,
              "width": 24,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFD048",
                  "borderRadius": 14,
                  "height": 24,
                  "justifyContent": "center",
                  "width": 24,
                }
              }
            >
              <MaterialIcons
                color="#000000"
                name="redeem"
                size={10}
                style={
                  {
                    "backgroundColor": "transparent",
                  }
                }
                testID="iconIcon"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 9,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        <Text
          onPress={[Function]}
          style={
            [
              {
                "color": "#F2F2F2",
              },
              {
                "fontFamily": "Roboto_400Regular",
              },
              [
                {
                  "fontSize": 15,
                  "lineHeight": 18,
                },
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontWeight": "500",
                },
                {
                  "color": "#F2F2F2",
                },
              ],
            ]
          }
        >
          Fake user 
        </Text>
        sent you a gift for Boost
         
      </Text>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 2,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        Sep 20, 2022
      </Text>
      <View
        style={
          [
            {
              "alignSelf": "center",
              "borderRadius": 20,
              "height": 10,
              "marginLeft": 8,
              "width": 10,
            },
            {
              "backgroundColor": "#FFD048",
            },
          ]
        }
      />
    </View>
  </View>
  <View
    style={
      [
        {
          "marginTop": 24,
          "paddingLeft": 0,
        },
        {
          "marginTop": 16,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignSelf": "stretch",
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderRadius": 100,
              "flexDirection": "column",
              "justifyContent": "center",
              "overflow": "hidden",
            },
            {
              "backgroundColor": "transparent",
            },
            {
              "minHeight": 42,
              "paddingHorizontal": 24,
              "paddingVertical": 2,
            },
            undefined,
            undefined,
            undefined,
            false,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#FFD048",
              "borderRadius": 100,
              "borderWidth": 1,
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.05)",
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "#F2F2F2",
                },
                {
                  "fontFamily": "Roboto_500Medium",
                },
                {
                  "fontSize": 18,
                  "lineHeight": 24,
                },
                {
                  "textAlign": "left",
                },
              ]
            }
          >
            Claim Gift
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Notification Receiver accepts an offer 1`] = `
<View
  onPress={[Function]}
  style={
    [
      {
        "flex": 1,
        "flexDirection": "column",
        "paddingHorizontal": 20,
        "paddingVertical": 16,
      },
      {
        "borderBottomWidth": 0.5,
      },
      {
        "borderColor": "#53565A",
      },
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
          "marginRight": 28,
        }
      }
    >
      <View
        onPress={[Function]}
      >
        <Image
          source={
            {
              "headers": {
                "App-Version": "3.8.0",
                "Cache-Control": "no-cache, no-store, must-revalidate",
                "Content-Type": "application/json",
                "Pragma": "no-cache",
                "no-cache": "1",
              },
              "uri": "https://cdn.minds.com/icon/fakeGuid/medium/undefined",
            }
          }
          style={
            {
              "borderRadius": 18.5,
              "height": 37,
              "width": 37,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            {
              "borderRadius": 14,
              "bottom": -15,
              "height": 24,
              "left": 15,
              "margin": 7,
              "overflow": "hidden",
              "position": "absolute",
              "shadowColor": "rgba(0,0,0, .4)",
              "shadowOffset": {
                "height": 1,
                "width": 1,
              },
              "shadowOpacity": 1,
              "shadowRadius": 1,
              "width": 24,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFD048",
                  "borderRadius": 14,
                  "height": 24,
                  "justifyContent": "center",
                  "width": 24,
                }
              }
            >
              <MaterialIcons
                color="#000000"
                name="tips-and-updates"
                size={10}
                style={
                  {
                    "backgroundColor": "transparent",
                  }
                }
                testID="iconIcon"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 9,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        <Text
          onPress={[Function]}
          style={
            [
              {
                "color": "#F2F2F2",
              },
              {
                "fontFamily": "Roboto_400Regular",
              },
              [
                {
                  "fontSize": 15,
                  "lineHeight": 18,
                },
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontWeight": "500",
                },
                {
                  "color": "#F2F2F2",
                },
              ],
            ]
          }
        >
          Fake user 
        </Text>
        replied to
         your
         
        <Text
          onPress={[Function]}
          style={
            [
              {
                "color": "#F2F2F2",
              },
              {
                "fontFamily": "Roboto_400Regular",
              },
              [
                {
                  "fontSize": 15,
                  "lineHeight": 18,
                },
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontWeight": "500",
                },
                {
                  "color": "#F2F2F2",
                },
              ],
            ]
          }
        >
          Supermind offer
        </Text>
      </Text>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 2,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        Sep 20, 2022
      </Text>
      <View
        style={
          [
            {
              "alignSelf": "center",
              "borderRadius": 20,
              "height": 10,
              "marginLeft": 8,
              "width": 10,
            },
            {
              "backgroundColor": "#FFD048",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`Notification Receiver declines an offer 1`] = `
<View
  onPress={[Function]}
  style={
    [
      {
        "flex": 1,
        "flexDirection": "column",
        "paddingHorizontal": 20,
        "paddingVertical": 16,
      },
      {
        "borderBottomWidth": 0.5,
      },
      {
        "borderColor": "#53565A",
      },
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
          "marginRight": 28,
        }
      }
    >
      <View
        onPress={[Function]}
      >
        <Image
          source={
            {
              "headers": {
                "App-Version": "3.8.0",
                "Cache-Control": "no-cache, no-store, must-revalidate",
                "Content-Type": "application/json",
                "Pragma": "no-cache",
                "no-cache": "1",
              },
              "uri": "https://cdn.minds.com/icon/fakeGuid/medium/undefined",
            }
          }
          style={
            {
              "borderRadius": 18.5,
              "height": 37,
              "width": 37,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            {
              "borderRadius": 14,
              "bottom": -15,
              "height": 24,
              "left": 15,
              "margin": 7,
              "overflow": "hidden",
              "position": "absolute",
              "shadowColor": "rgba(0,0,0, .4)",
              "shadowOffset": {
                "height": 1,
                "width": 1,
              },
              "shadowOpacity": 1,
              "shadowRadius": 1,
              "width": 24,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFD048",
                  "borderRadius": 14,
                  "height": 24,
                  "justifyContent": "center",
                  "width": 24,
                }
              }
            >
              <MaterialIcons
                color="#000000"
                name="tips-and-updates"
                size={10}
                style={
                  {
                    "backgroundColor": "transparent",
                  }
                }
                testID="iconIcon"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 9,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        <Text
          onPress={[Function]}
          style={
            [
              {
                "color": "#F2F2F2",
              },
              {
                "fontFamily": "Roboto_400Regular",
              },
              [
                {
                  "fontSize": 15,
                  "lineHeight": 18,
                },
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontWeight": "500",
                },
                {
                  "color": "#F2F2F2",
                },
              ],
            ]
          }
        >
          Fake user 
        </Text>
        has declined
         your
         
        <Text
          onPress={[Function]}
          style={
            [
              {
                "color": "#F2F2F2",
              },
              {
                "fontFamily": "Roboto_400Regular",
              },
              [
                {
                  "fontSize": 15,
                  "lineHeight": 18,
                },
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontWeight": "500",
                },
                {
                  "color": "#F2F2F2",
                },
              ],
            ]
          }
        >
          Supermind offer
        </Text>
      </Text>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 2,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        Sep 20, 2022
      </Text>
      <View
        style={
          [
            {
              "alignSelf": "center",
              "borderRadius": 20,
              "height": 10,
              "marginLeft": 8,
              "width": 10,
            },
            {
              "backgroundColor": "#FFD048",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`Notification Referrer affiliate earnings deposited 1`] = `
<View
  onPress={[Function]}
  style={
    [
      {
        "flex": 1,
        "flexDirection": "column",
        "paddingHorizontal": 20,
        "paddingVertical": 16,
      },
      {
        "borderBottomWidth": 0.5,
      },
      {
        "borderColor": "#53565A",
      },
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
          "marginRight": 28,
        }
      }
    >
      <View
        onPress={[Function]}
      >
        <Image
          source={
            {
              "headers": {
                "App-Version": "3.8.0",
                "Cache-Control": "no-cache, no-store, must-revalidate",
                "Content-Type": "application/json",
                "Pragma": "no-cache",
                "no-cache": "1",
              },
              "uri": "https://cdn.minds.com/icon/fakeGuid/medium/undefined",
            }
          }
          style={
            {
              "borderRadius": 18.5,
              "height": 37,
              "width": 37,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            {
              "borderRadius": 14,
              "bottom": -15,
              "height": 24,
              "left": 15,
              "margin": 7,
              "overflow": "hidden",
              "position": "absolute",
              "shadowColor": "rgba(0,0,0, .4)",
              "shadowOffset": {
                "height": 1,
                "width": 1,
              },
              "shadowOpacity": 1,
              "shadowRadius": 1,
              "width": 24,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFD048",
                  "borderRadius": 14,
                  "height": 24,
                  "justifyContent": "center",
                  "width": 24,
                }
              }
            >
              <MaterialIcons
                color="#000000"
                name="attach-money"
                size={10}
                style={
                  {
                    "backgroundColor": "transparent",
                  }
                }
                testID="iconIcon"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 9,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        You just earned $12.99 from Minds Affiliate Program
         
      </Text>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 2,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        Sep 20, 2022
      </Text>
      <View
        style={
          [
            {
              "alignSelf": "center",
              "borderRadius": 20,
              "height": 10,
              "marginLeft": 8,
              "width": 10,
            },
            {
              "backgroundColor": "#FFD048",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`Notification Sender sends a Supermind offer 1`] = `
<View
  onPress={[Function]}
  style={
    [
      {
        "flex": 1,
        "flexDirection": "column",
        "paddingHorizontal": 20,
        "paddingVertical": 16,
      },
      {
        "borderBottomWidth": 0.5,
      },
      {
        "borderColor": "#53565A",
      },
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
          "marginRight": 28,
        }
      }
    >
      <View
        onPress={[Function]}
      >
        <Image
          source={
            {
              "headers": {
                "App-Version": "3.8.0",
                "Cache-Control": "no-cache, no-store, must-revalidate",
                "Content-Type": "application/json",
                "Pragma": "no-cache",
                "no-cache": "1",
              },
              "uri": "https://cdn.minds.com/icon/fakeGuid/medium/undefined",
            }
          }
          style={
            {
              "borderRadius": 18.5,
              "height": 37,
              "width": 37,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            {
              "borderRadius": 14,
              "bottom": -15,
              "height": 24,
              "left": 15,
              "margin": 7,
              "overflow": "hidden",
              "position": "absolute",
              "shadowColor": "rgba(0,0,0, .4)",
              "shadowOffset": {
                "height": 1,
                "width": 1,
              },
              "shadowOpacity": 1,
              "shadowRadius": 1,
              "width": 24,
            }
          }
        >
          <View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFD048",
                  "borderRadius": 14,
                  "height": 24,
                  "justifyContent": "center",
                  "width": 24,
                }
              }
            >
              <MaterialIcons
                color="#000000"
                name="tips-and-updates"
                size={10}
                style={
                  {
                    "backgroundColor": "transparent",
                  }
                }
                testID="iconIcon"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 9,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        <Text
          onPress={[Function]}
          style={
            [
              {
                "color": "#F2F2F2",
              },
              {
                "fontFamily": "Roboto_400Regular",
              },
              [
                {
                  "fontSize": 15,
                  "lineHeight": 18,
                },
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontWeight": "500",
                },
                {
                  "color": "#F2F2F2",
                },
              ],
            ]
          }
        >
          Fake user 
        </Text>
        sent you
         a
         
        <Text
          onPress={[Function]}
          style={
            [
              {
                "color": "#F2F2F2",
              },
              {
                "fontFamily": "Roboto_400Regular",
              },
              [
                {
                  "fontSize": 15,
                  "lineHeight": 18,
                },
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontWeight": "500",
                },
                {
                  "color": "#F2F2F2",
                },
              ],
            ]
          }
        >
          Supermind offer
        </Text>
      </Text>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 2,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 15,
                "lineHeight": 18,
              },
              {
                "fontWeight": "400",
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        Sep 20, 2022
      </Text>
      <View
        style={
          [
            {
              "alignSelf": "center",
              "borderRadius": 20,
              "height": 10,
              "marginLeft": 8,
              "width": 10,
            },
            {
              "backgroundColor": "#FFD048",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;
